--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.23.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.2",
     "rxjs": "^5.4.2",
     "whatwg-fetch": "^2.0.3"
   },
