--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "rxjs": "^5.4.2",
     "whatwg-fetch": "^2.0.3"
   },
