--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^4.2.0",
     "eslint-config-recommended": "^1.5.0",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
     "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
