--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,16 @@
 	"parserOptions": {
 		"ecmaVersion": 7,
 		"ecmaFeatures": {
-			"experimentalObjectRestSpread": true
+			"experimentalObjectRestSpread": true,
+			"jsx": true
 		},
 		"sourceType": "module"
 	},
 	"env": {
-		"es6": true,
 		"browser": true,
-		"node": true
+		"node": true,
+		"jest": true,
+		"es6": true
 	},
 	"extends": [
 		"eslint:recommended"
