--- a/package.json
+++ b/package.json
@@ -1,41 +1,56 @@
 {
-  "name": "news",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "https://github.com/zenontrujillo/news.git",
-  "author": "Zenon Trujillo <zenon.t@outlook.com>",
-  "license": "MIT",
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "rxjs": "^5.4.2",
-    "whatwg-fetch": "^2.0.3"
-  },
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-native-modules": "^6.9.4",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "eslint": "^4.2.0",
-    "eslint-config-recommended": "^1.5.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
-    "expose-loader": "^0.7.3",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-hot-middleware": "^2.18.2"
-  }
+	"name": "news",
+	"version": "0.0.1",
+	"main": "index.js",
+	"repository": "https://github.com/zenontrujillo/news.git",
+	"author": "Zenon Trujillo <zenon.t@outlook.com>",
+	"engines": {
+		"npm": ">=3",
+		"node": ">=5"
+	},
+	"scripts": {
+		"test": "test",
+		"dev:build": "webpack -d --config webpack.config.dev.babel.js",
+		"dev": "webpack-dev-server -d --content-base dist --inline --hot --watch --config webpack.config.dev.babel.js",
+		"dev:open": "webpack-dev-server -d --content-base dist --inline --hot --watch --open --config webpack.config.dev.babel.js",
+		"build": "webpack -p --config webpack.config.prd.babel.js",
+		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"babel-runtime": "^6.23.0",
+		"immutable": "^3.8.1",
+		"prop-types": "^15.5.10",
+		"react": "^15.6.1",
+		"react-dom": "^15.6.1",
+		"react-redux": "^5.0.5",
+		"react-router-dom": "^4.1.1",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0",
+		"rxjs": "^5.4.2",
+		"whatwg-fetch": "^2.0.3"
+	},
+	"devDependencies": {
+		"babel-core": "^6.25.0",
+		"babel-eslint": "^7.2.3",
+		"babel-loader": "^7.1.1",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-object-rest-spread": "^6.23.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2015-native-modules": "^6.9.4",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"babel-register": "^6.24.1",
+		"eslint": "^4.2.0",
+		"eslint-config-recommended": "^1.5.0",
+		"eslint-plugin-promise": "^3.5.0",
+		"eslint-plugin-react": "^7.1.0",
+		"expose-loader": "^0.7.3",
+		"file-loader": "^0.11.2",
+		"html-webpack-plugin": "^2.29.0",
+		"uglifyjs-webpack-plugin": "^0.4.6",
+		"webpack": "^3.3.0",
+		"webpack-dev-server": "^2.5.1",
+		"webpack-hot-middleware": "^2.18.2"
+	}
 }
