--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"build:dev": "webpack -d --config webpack.config.dev.babel.js",
 		"start": "webpack-dev-server -d --content-base dist --inline --hot --watch --config webpack.config.dev.babel.js",
 		"start:open": "webpack-dev-server -d --content-base dist --inline --hot --watch --open --config webpack.config.dev.babel.js",
+		"serve": "nodemon src/server/index.js --exec babel-node --presets es2015,stage-0",
 		"build": "webpack -p --config webpack.config.prd.babel.js",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
 	"license": "MIT",
 	"dependencies": {
 		"babel-runtime": "^6.23.0",
+		"express": "^4.15.3",
 		"immutable": "^3.8.1",
 		"prop-types": "^15.5.10",
 		"react": "^15.6.1",
@@ -29,9 +31,11 @@
 		"redux-observable": "^0.14.1",
 		"redux-thunk": "^2.2.0",
 		"rxjs": "^5.4.2",
+		"socket.io": "^2.0.3",
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
+		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
 		"babel-eslint": "^7.2.3",
 		"babel-loader": "^7.1.1",
@@ -42,6 +46,7 @@
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.24.1",
+		"babel-watch": "^2.0.7",
 		"eslint": "^4.2.0",
 		"eslint-config-recommended": "^1.5.0",
 		"eslint-plugin-promise": "^3.5.0",
@@ -49,6 +54,7 @@
 		"expose-loader": "^0.7.3",
 		"file-loader": "^0.11.2",
 		"html-webpack-plugin": "^2.29.0",
+		"nodemon": "^1.11.0",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"webpack": "^3.3.0",
 		"webpack-dev-server": "^2.5.1",
