--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	},
 	"scripts": {
 		"test": "test",
+		"clean": "rimraf dist",
+		"build:dev:client": "webpack --config ./webpack/client/dev.config.babel.js",
+		"build:dev:server": "webpack --config webpack/server/dev.config.babel.js",
 		"build:dev": "webpack -d --config webpack.config.dev.babel.js",
 		"start": "webpack-dev-server -d --content-base dist --inline --hot --watch --config webpack.config.dev.babel.js",
 		"start:open": "webpack-dev-server -d --content-base dist --inline --hot --watch --open --config webpack.config.dev.babel.js",
@@ -55,6 +58,8 @@
 		"file-loader": "^0.11.2",
 		"html-webpack-plugin": "^2.29.0",
 		"nodemon": "^1.11.0",
+		"npm-run-all": "^4.0.2",
+		"rimraf": "^2.6.1",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"webpack": "^3.3.0",
 		"webpack-dev-server": "^2.5.1",
