webpack server dev bundle

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"clean": "rimraf dist",
 		"build:dev:client": "webpack --config ./webpack/client/dev.config.babel.js",
 		"build:dev:server": "webpack --config webpack/server/dev.config.babel.js",
-		"build:dev": "webpack -d --config webpack.config.dev.babel.js",
+		"build:dev": "run-s clean build:dev:server",
 		"start": "webpack-dev-server -d --content-base dist --inline --hot --watch --config webpack.config.dev.babel.js",
 		"start:open": "webpack-dev-server -d --content-base dist --inline --hot --watch --open --config webpack.config.dev.babel.js",
 		"serve": "nodemon src/server/index.js --exec babel-node --presets es2015,stage-0",
