--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test": "test",
 		"clean": "rimraf dist",
 		"build:dev:client": "webpack --config ./webpack/client/dev.config.babel.js",
-		"build:dev:server": "webpack --config webpack/server/dev.config.babel.js",
+		"build:dev:server": "webpack --watch --config webpack/server/dev.config.babel.js",
 		"build:dev": "run-s clean build:dev:server",
 		"serve": "nodemon dist/server.js",
 		"start": "run-s build:dev serve",
@@ -62,6 +62,7 @@
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"webpack": "^3.3.0",
 		"webpack-dev-server": "^2.5.1",
-		"webpack-hot-middleware": "^2.18.2"
+		"webpack-hot-middleware": "^2.18.2",
+		"webpack-shell-plugin": "^0.5.0"
 	}
 }
