webconfig server dev scripts

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"build:dev:client": "webpack --config ./webpack/client/dev.config.babel.js",
 		"build:dev:server": "webpack --watch --config webpack/server/dev.config.babel.js",
 		"build:dev": "run-s clean build:dev:server",
-		"serve": "nodemon dist/server.js",
-		"start": "run-s build:dev serve",
+		"prestart": "run-s clean",
+		"start": "run-p build:dev:server",
 		"build": "webpack -p --config webpack.config.prd.babel.js",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
