--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 	"scripts": {
 		"test": "test",
 		"clean": "rimraf dist",
-		"build:dev:client": "webpack --config ./webpack/client/dev.config.babel.js",
+		"build:dev:client": "webpack --config webpack/client/dev.config.babel.js",
 		"build:dev:server": "webpack --watch --config webpack/server/dev.config.babel.js",
 		"build:dev": "run-s clean build:dev:server",
 		"prestart": "run-s clean",
-		"start": "run-p build:dev:server",
+		"start": "run-p build:dev:client",
+		"poststart": "run-p build:dev:server",
 		"build": "webpack -p --config webpack.config.prd.babel.js",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
