--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
 	},
 	"scripts": {
 		"test": "test",
-		"clean": "rimraf dist",
+		"cleanup": "rimraf dist",
 		"build:dev:client": "webpack --config webpack/client/dev.config.babel.js",
 		"build:dev:server": "webpack --watch --config webpack/server/dev.config.babel.js",
-		"build:dev": "run-s clean build:dev:server",
-		"prestart": "run-s clean",
+		"build:dev": "run-s cleanup build:dev:server",
+		"prestart": "run-s cleanup",
 		"start": "run-p build:dev:client",
 		"poststart": "run-p build:dev:server",
 		"build": "webpack -p --config webpack.config.prd.babel.js",
