--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	"scripts": {
 		"test": "test",
 		"cleanup": "rimraf dist",
-		"build:dev:client": "webpack --config webpack/client/dev.config.babel.js",
-		"build:dev:server": "webpack --watch --config webpack/server/dev.config.babel.js",
+		"build:dev:client": "cross-env CLIENT_PUBLIC_PATH=assets/ cross-env CLIENT_OUTPUT_PATH=dist/assets cross-env NODE_ENV=development webpack --config webpack/client/dev.config.babel.js",
+		"build:dev:server": "cross-env CLIENT_PUBLIC_PATH=assets/ cross-env CLIENT_OUTPUT_PATH=dist/assets cross-env NODE_ENV=development webpack --watch --config webpack/server/dev.config.babel.js",
 		"build:dev": "run-s cleanup build:dev:server",
 		"prestart": "run-s cleanup",
 		"start": "run-p build:dev:client",
@@ -51,6 +51,7 @@
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.24.1",
 		"babel-watch": "^2.0.7",
+		"cross-env": "^5.0.1",
 		"eslint": "^4.2.0",
 		"eslint-config-recommended": "^1.5.0",
 		"eslint-plugin-promise": "^3.5.0",
