--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
 		"build:dev:client": "cross-env NODE_ENV=development webpack --config webpack/client/dev.config.babel.js",
 		"build:dev:server": "cross-env NODE_ENV=development cross-env ASSETS_PATH=../dist/assets/ webpack --watch --config webpack/server/dev.config.babel.js",
 		"build:dev": "run-s cleanup build:dev:server",
-		"prestart": "run-s cleanup",
-		"start": "run-p build:dev:client",
-		"poststart": "run-p build:dev:server",
 		"build": "webpack -p --config webpack.config.prd.babel.js",
-		"local-dev": "webpack-dev-server -d --content-base ./dist --inline --hot --watch --config webpack/client/dev.config.babel.js",
+		"dev-server": "webpack-dev-server -d --content-base ./dist --inline --watch --config webpack/client/dev.config.babel.js",
+		"start" :"run-s cleanup dev-server",
+		"start:server": "run-s cleanup build:dev:client build:dev:server",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
 	"license": "MIT",
