react hot module replacement

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"build:dev:client": "cross-env NODE_ENV=development webpack --config webpack/client/dev.config.babel.js",
 		"build:dev:server": "cross-env NODE_ENV=development cross-env ASSETS_PATH=../dist/assets/ webpack --watch --config webpack/server/dev.config.babel.js",
 		"client-dev-server": "webpack-dev-server -d --content-base ./dist --inline --watch --config webpack/client/dev.config.babel.js",
-		"start" :"run-s cleanup client-dev-server",
+		"start": "run-s cleanup client-dev-server",
 		"start:server": "run-s cleanup build:dev:client build:dev:server",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
@@ -26,8 +26,9 @@
 		"prop-types": "^15.5.10",
 		"react": "^15.6.1",
 		"react-dom": "^15.6.1",
+		"react-hot-loader": "next",
 		"react-redux": "^5.0.5",
-		"react-router-dom": "^4.1.1",
+		"react-router-dom": "^4.1.2",
 		"redux": "^3.7.2",
 		"redux-observable": "^0.14.1",
 		"redux-thunk": "^2.2.0",
