--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express": "^4.15.3",
 		"immutable": "^3.8.1",
 		"prop-types": "^15.5.10",
+		"query-string": "^4.3.4",
 		"react": "^15.6.1",
 		"react-dom": "^15.6.1",
 		"react-hot-loader": "3.0.0-beta.6",
@@ -34,6 +35,7 @@
 		"redux-thunk": "^2.2.0",
 		"rxjs": "^5.4.2",
 		"socket.io": "^2.0.3",
+		"url-join": "^2.0.2",
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
