--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react": "^15.6.1",
 		"react-dom": "^15.6.1",
 		"react-hot-loader": "3.0.0-beta.6",
+		"react-observable": "^1.1.3",
 		"react-redux": "^5.0.5",
 		"react-router-dom": "^4.1.2",
 		"redux": "^3.7.2",
