--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
 		"test": "test",
 		"cleanup": "rimraf dist",
 		"build-client-dev": "webpack --config webpack/client/dev.config.babel.js",
-		"build-client-dev:ssr": "webpack --config webpack/client/dev.ssr.config.babel.js",
+		"build-client-ssr": "webpack --config webpack/client/ssr.config.babel.js",
 		"build-server-dev": "webpack --config webpack/server/dev.config.babel.js",
 		"local-client": "webpack-dev-server --config webpack/client/dev.config.babel.js",
 		"local-ssr": "webpack --watch --config webpack/server/dev.config.babel.js",
 		"start": "run-s cleanup local-client",
-		"ssr": "run-s cleanup build-client-dev:ssr local-ssr",
+		"ssr": "run-s cleanup build-client-ssr local-ssr",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
 	"license": "MIT",
