--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"immutable": "^3.8.1",
 		"prop-types": "^15.5.10",
 		"query-string": "^4.3.4",
-		"react": "^15.6.1",
-		"react-dom": "^15.6.1",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
 		"react-hot-loader": "3.0.0-beta.6",
 		"react-intl": "^2.3.0",
 		"react-observable": "^1.1.3",
@@ -44,6 +44,13 @@
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
+		"@types/express": "^4.11.0",
+		"@types/node": "^8.5.2",
+		"@types/react": "^16.0.31",
+		"@types/react-dom": "^16.0.3",
+		"@types/react-router": "^4.0.20",
+		"@types/webpack": "^3.8.1",
+		"@types/webpack-env": "^1.13.3",
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
 		"babel-eslint": "^7.2.3",
@@ -73,6 +80,9 @@
 		"rimraf": "^2.6.1",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
+		"ts-loader": "^3.2.0",
+		"ts-node": "^4.0.2",
+		"typescript": "^2.6.2",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"url-loader": "^0.5.9",
 		"webpack": "^3.3.0",
