--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@types/react-hot-loader": "^3.0.5",
 		"babel-runtime": "^6.23.0",
 		"express": "^4.15.3",
 		"immutable": "^3.8.1",
@@ -29,10 +30,10 @@
 		"query-string": "^4.3.4",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
-		"react-hot-loader": "3.0.0-beta.6",
-		"react-intl": "^2.3.0",
+		"react-hot-loader": "^3.1.3",
+		"react-intl": "^2.4.0",
 		"react-observable": "^1.1.3",
-		"react-redux": "^5.0.5",
+		"react-redux": "^5.0.6",
 		"react-router-dom": "^4.1.2",
 		"redux": "^3.7.2",
 		"redux-observable": "^0.14.1",
@@ -48,6 +49,8 @@
 		"@types/node": "^8.5.2",
 		"@types/react": "^16.0.31",
 		"@types/react-dom": "^16.0.3",
+		"@types/react-intl": "^2.3.2",
+		"@types/react-redux": "^5.0.14",
 		"@types/react-router": "^4.0.20",
 		"@types/webpack": "^3.8.1",
 		"@types/webpack-env": "^1.13.3",
@@ -82,6 +85,8 @@
 		"style-loader": "^0.18.2",
 		"ts-loader": "^3.2.0",
 		"ts-node": "^4.0.2",
+		"tslint": "^5.8.0",
+		"tslint-react": "^3.2.0",
 		"typescript": "^2.6.2",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"url-loader": "^0.5.9",
