--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"node": ">=5"
 	},
 	"scripts": {
-		"test": "test",
+		"test": "jest --config jest/config.json",
 		"cleanup": "rimraf dist",
 		"build-client-dev": "webpack --config webpack/client/dev.config.babel.js",
 		"build-client-ssr": "webpack --config webpack/client/ssr.config.babel.js",
@@ -24,10 +24,12 @@
 	"dependencies": {
 		"@types/react-hot-loader": "^3.0.5",
 		"babel-runtime": "^6.23.0",
+		"enzyme": "^3.2.0",
+		"enzyme-adapter-react-16": "^1.1.1",
 		"express": "^4.15.3",
 		"immutable": "^3.8.1",
 		"prop-types": "^15.5.10",
-		"query-string": "^4.3.4",
+		"query-string": "^5.0.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-hot-loader": "^3.1.3",
@@ -39,19 +41,24 @@
 		"redux-observable": "^0.14.1",
 		"redux-thunk": "^2.2.0",
 		"reselect": "^3.0.1",
-		"rxjs": "^5.4.2",
+		"rxjs": "^5.5.6",
 		"socket.io": "^2.0.3",
 		"url-join": "^2.0.2",
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
+		"@types/enzyme": "^3.1.6",
+		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/express": "^4.11.0",
+		"@types/jest": "^21.1.9",
 		"@types/node": "^8.5.2",
+		"@types/query-string": "^5.0.1",
 		"@types/react": "^16.0.31",
 		"@types/react-dom": "^16.0.3",
 		"@types/react-intl": "^2.3.2",
 		"@types/react-redux": "^5.0.14",
 		"@types/react-router": "^4.0.20",
+		"@types/url-join": "^0.8.2",
 		"@types/webpack": "^3.8.1",
 		"@types/webpack-env": "^1.13.3",
 		"babel-cli": "^6.24.1",
@@ -68,6 +75,7 @@
 		"babel-watch": "^2.0.7",
 		"cross-env": "^5.0.1",
 		"css-loader": "^0.28.4",
+		"enzyme-to-json": "^3.3.0",
 		"eslint": "^4.2.0",
 		"eslint-config-recommended": "^1.5.0",
 		"eslint-plugin-promise": "^3.5.0",
@@ -76,6 +84,7 @@
 		"file-loader": "^0.11.2",
 		"html-webpack-plugin": "^2.29.0",
 		"isomorphic-style-loader": "^3.0.0",
+		"jest": "^22.0.4",
 		"node-sass": "^4.5.3",
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
@@ -83,6 +92,7 @@
 		"rimraf": "^2.6.1",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
+		"ts-jest": "^22.0.0",
 		"ts-loader": "^3.2.0",
 		"ts-node": "^4.0.2",
 		"tslint": "^5.8.0",
