--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,32 @@
 {
-    "version": "0.2.0",
-    "configurations": [
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"type": "node",
+			"request": "attach",
+			"name": "Attach",
+			"port": 9229
+		},
 		{
 			"name": "Jest",
 			"type": "node",
 			"request": "launch",
-			"env": { "NODE_ENV": "test" },
+			"env": {
+				"NODE_ENV": "test"
+			},
 			"args": [
-				"--config=jest/config.json"
+
+
 			],
+			"runtimeExecutable": "node",
 			"runtimeArgs": [
-			  "--inspect-brk",
-			  "--debug-brk",
-			  "${workspaceRoot}/node_modules/.bin/jest",
-			  "--runInBand"
+				"--inspect-brk",
+				"${workspaceRoot}/node_modules/.bin/jest",
+				"--config=jest/config.json",
+				"--runInBand"
 			],
 			"console": "integratedTerminal",
 			"internalConsoleOptions": "neverOpen"
-		  }
-    ]
+		}
+	]
 }
