--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@types/enzyme": "^3.1.6",
 		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/express": "^4.11.0",
+		"@types/html-webpack-plugin": "^2.30.2",
 		"@types/jest": "^21.1.9",
 		"@types/node": "^8.5.2",
 		"@types/query-string": "^5.0.1",
@@ -57,12 +58,12 @@
 		"@types/react-redux": "^5.0.14",
 		"@types/react-router": "^4.0.20",
 		"@types/url-join": "^0.8.2",
-		"@types/webpack": "^3.8.1",
+		"@types/webpack": "^3.8.8",
 		"@types/webpack-env": "^1.13.3",
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
 		"babel-eslint": "^7.2.3",
-		"babel-loader": "^7.1.1",
+		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-plugin-transform-object-rest-spread": "^6.23.0",
 		"babel-preset-es2015": "^6.24.1",
@@ -72,7 +73,7 @@
 		"babel-register": "^6.24.1",
 		"babel-watch": "^2.0.7",
 		"cross-env": "^5.0.1",
-		"css-loader": "^0.28.4",
+		"css-loader": "^0.28.9",
 		"enzyme": "^3.2.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"enzyme-to-json": "^3.3.0",
@@ -81,26 +82,26 @@
 		"eslint-plugin-promise": "^3.5.0",
 		"eslint-plugin-react": "^7.1.0",
 		"expose-loader": "^0.7.3",
-		"file-loader": "^0.11.2",
-		"html-webpack-plugin": "^2.29.0",
+		"file-loader": "^1.1.9",
+		"html-webpack-plugin": "^2.30.1",
 		"isomorphic-style-loader": "^3.0.0",
 		"jest": "^22.0.4",
-		"node-sass": "^4.5.3",
+		"node-sass": "^4.7.2",
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
 		"postcss-loader": "^2.0.6",
 		"rimraf": "^2.6.1",
 		"sass-loader": "^6.0.6",
-		"style-loader": "^0.18.2",
+		"style-loader": "^0.20.2",
 		"ts-jest": "^22.0.0",
-		"ts-loader": "^3.2.0",
+		"ts-loader": "^3.5.0",
 		"ts-node": "^4.0.2",
 		"tslint": "^5.8.0",
 		"tslint-react": "^3.2.0",
 		"typescript": "^2.6.2",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"url-loader": "^0.5.9",
-		"webpack": "^3.3.0",
+		"webpack": "^3.11.0",
 		"webpack-dev-server": "^2.5.1",
 		"webpack-shell-plugin": "^0.5.0"
 	}
