--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"@types/react-intl": "^2.3.2",
 		"@types/react-redux": "^5.0.14",
 		"@types/react-router": "^4.0.20",
+		"@types/redux": "^3.6.0",
 		"@types/url-join": "^0.8.2",
 		"@types/webpack": "^3.8.8",
 		"@types/webpack-env": "^1.13.3",
