--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"build-client-dev": "webpack --config webpack/client/dev.config.babel.js",
 		"build-client-ssr": "webpack --config webpack/client/ssr.config.babel.js",
 		"build-server-dev": "webpack --config webpack/server/dev.config.babel.js",
-		"local-client": "webpack-dev-server --config webpack/client/dev.config.babel.js",
+		"serve-client": "webpack-dev-server --config webpack/client/dev.config.ts",
 		"local-ssr": "webpack --watch --config webpack/server/dev.config.babel.js",
-		"start": "run-s cleanup local-client",
+		"start": "run-s cleanup serve-client",
 		"ssr": "run-s cleanup build-client-ssr local-ssr",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
@@ -44,6 +44,7 @@
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
+		"@types/dotenv": "^4.0.2",
 		"@types/enzyme": "^3.1.6",
 		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/express": "^4.11.0",
@@ -67,6 +68,7 @@
 		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-plugin-transform-object-rest-spread": "^6.23.0",
+		"babel-preset-env": "^1.6.1",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-es2015-native-modules": "^6.9.4",
 		"babel-preset-react": "^6.24.1",
@@ -75,6 +77,7 @@
 		"babel-watch": "^2.0.7",
 		"cross-env": "^5.0.1",
 		"css-loader": "^0.28.9",
+		"dotenv": "^5.0.1",
 		"enzyme": "^3.2.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"enzyme-to-json": "^3.3.0",
@@ -95,7 +98,7 @@
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.20.2",
 		"ts-jest": "^22.0.0",
-		"ts-loader": "^3.5.0",
+		"ts-loader": "^4.1.0",
 		"ts-node": "^4.0.2",
 		"tslint": "^5.8.0",
 		"tslint-react": "^3.2.0",
