--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 		"ts-node": "^5.0.1",
 		"tslint": "^5.8.0",
 		"tslint-react": "^3.2.0",
-		"typescript": "^2.6.2",
+		"typescript": "^2.7.x",
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"url-loader": "^0.5.9",
 		"webpack": "^3.11.0",
