--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
 		"expose-loader": "^0.7.3",
 		"file-loader": "^1.1.9",
 		"html-webpack-plugin": "^3.0.7",
-		"isomorphic-style-loader": "^3.0.0",
 		"jest": "^22.0.4",
 		"node-sass": "^4.7.2",
 		"nodemon": "^1.11.0",
@@ -102,7 +101,8 @@
 		"typescript": "^2.7.x",
 		"uglifyjs-webpack-plugin": "^1.2.4",
 		"url-loader": "^1.0.1",
-		"webpack": "^3.11.0",
+		"webpack": "^4.2.0",
+		"webpack-cli": "^2.0.12",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-shell-plugin": "^0.5.0"
 	}
