--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
 		"babel-runtime": "^6.23.0",
 		"express": "^4.15.3",
 		"immutable": "^3.8.1",
-		"prop-types": "^15.5.10",
+		"prop-types": "^15.6.1",
 		"query-string": "^6.0.0",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-intl": "^2.4.0",
 		"react-redux": "^5.0.6",
-		"react-router-dom": "^4.1.2",
+		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
 		"redux-observable": "^0.18.0",
 		"redux-thunk": "^2.2.0",
@@ -49,6 +49,7 @@
 		"@types/html-webpack-plugin": "^2.30.2",
 		"@types/jest": "^22.2.0",
 		"@types/node": "^9.4.7",
+		"@types/prop-types": "^15.5.2",
 		"@types/query-string": "^5.1.0",
 		"@types/react": "^16.0.31",
 		"@types/react-dom": "^16.0.3",
@@ -56,6 +57,7 @@
 		"@types/react-intl": "^2.3.2",
 		"@types/react-redux": "^5.0.14",
 		"@types/react-router": "^4.0.20",
+		"@types/react-router-dom": "^4.2.5",
 		"@types/url-join": "^0.8.2",
 		"@types/webpack": "^4.0.0",
 		"@types/webpack-env": "^1.13.3",
@@ -97,7 +99,7 @@
 		"ts-loader": "^4.1.0",
 		"ts-node": "^5.0.1",
 		"tslint": "^5.8.0",
-		"tslint-react": "^3.2.0",
+		"tslint-react": "^3.5.1",
 		"typescript": "^2.7.x",
 		"uglifyjs-webpack-plugin": "^1.2.4",
 		"url-loader": "^1.0.1",
