--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "^16.2.0",
 		"react-intl": "^2.4.0",
 		"react-redux": "^5.0.6",
+		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
 		"redux-observable": "^0.18.0",
