--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
 		"node": ">=5"
 	},
 	"scripts": {
-		"test": "test",
+		"test": "jest --config jest/config.json",
 		"cleanup": "rimraf dist",
 		"build-client-dev": "webpack --config webpack/client/dev.config.babel.js",
 		"build-client-ssr": "webpack --config webpack/client/ssr.config.babel.js",
 		"build-server-dev": "webpack --config webpack/server/dev.config.babel.js",
-		"local-client": "webpack-dev-server --config webpack/client/dev.config.babel.js",
+		"serve-client": "webpack-dev-server --config webpack/client/dev.config.ts",
 		"local-ssr": "webpack --watch --config webpack/server/dev.config.babel.js",
-		"start": "run-s cleanup local-client",
+		"start": "run-s cleanup serve-client",
 		"ssr": "run-s cleanup build-client-ssr local-ssr",
 		"lint": "./node_modules/.bin/eslint **.js src/**.js --fix"
 	},
@@ -25,58 +25,88 @@
 		"babel-runtime": "^6.23.0",
 		"express": "^4.15.3",
 		"immutable": "^3.8.1",
-		"prop-types": "^15.5.10",
-		"query-string": "^4.3.4",
-		"react": "^15.6.1",
-		"react-dom": "^15.6.1",
-		"react-hot-loader": "3.0.0-beta.6",
-		"react-intl": "^2.3.0",
-		"react-observable": "^1.1.3",
-		"react-redux": "^5.0.5",
-		"react-router-dom": "^4.1.2",
+		"prop-types": "^15.6.1",
+		"query-string": "^6.0.0",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"react-intl": "^2.4.0",
+		"react-redux": "^5.0.6",
+		"react-router": "^4.2.0",
+		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
-		"redux-observable": "^0.14.1",
+		"redux-observable": "^0.18.0",
 		"redux-thunk": "^2.2.0",
 		"reselect": "^3.0.1",
-		"rxjs": "^5.4.2",
+		"rxjs": "^5.5.6",
 		"socket.io": "^2.0.3",
-		"url-join": "^2.0.2",
+		"url-join": "^4.0.0",
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
+		"@types/dotenv": "^4.0.2",
+		"@types/enzyme": "^3.1.6",
+		"@types/enzyme-adapter-react-16": "^1.0.1",
+		"@types/express": "^4.11.0",
+		"@types/html-webpack-plugin": "^2.30.2",
+		"@types/jest": "^22.2.0",
+		"@types/node": "^9.4.7",
+		"@types/prop-types": "^15.5.2",
+		"@types/query-string": "^5.1.0",
+		"@types/react": "^16.0.31",
+		"@types/react-dom": "^16.0.3",
+		"@types/react-hot-loader": "^3.0.5",
+		"@types/react-intl": "^2.3.2",
+		"@types/react-redux": "^5.0.14",
+		"@types/react-router": "^4.0.20",
+		"@types/react-router-dom": "^4.2.5",
+		"@types/url-join": "^0.8.2",
+		"@types/webpack": "^4.0.0",
+		"@types/webpack-env": "^1.13.3",
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
-		"babel-eslint": "^7.2.3",
-		"babel-loader": "^7.1.1",
+		"babel-eslint": "^8.2.2",
+		"babel-loader": "^7.1.2",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-plugin-transform-object-rest-spread": "^6.23.0",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.6.1",
 		"babel-preset-es2015-native-modules": "^6.9.4",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.24.1",
 		"babel-watch": "^2.0.7",
 		"cross-env": "^5.0.1",
-		"css-loader": "^0.28.4",
+		"css-loader": "^0.28.9",
+		"dotenv": "^5.0.1",
+		"enzyme": "^3.2.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"enzyme-to-json": "^3.3.0",
 		"eslint": "^4.2.0",
-		"eslint-config-recommended": "^1.5.0",
+		"eslint-config-recommended": "^2.0.0",
 		"eslint-plugin-promise": "^3.5.0",
 		"eslint-plugin-react": "^7.1.0",
 		"expose-loader": "^0.7.3",
-		"file-loader": "^0.11.2",
-		"html-webpack-plugin": "^2.29.0",
-		"isomorphic-style-loader": "^3.0.0",
-		"node-sass": "^4.5.3",
+		"file-loader": "^1.1.9",
+		"html-webpack-plugin": "^3.0.7",
+		"jest": "^22.0.4",
+		"node-sass": "^4.7.2",
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
 		"postcss-loader": "^2.0.6",
+		"react-hot-loader": "^4.0.0",
 		"rimraf": "^2.6.1",
 		"sass-loader": "^6.0.6",
-		"style-loader": "^0.18.2",
-		"uglifyjs-webpack-plugin": "^0.4.6",
-		"url-loader": "^0.5.9",
-		"webpack": "^3.3.0",
-		"webpack-dev-server": "^2.5.1",
+		"style-loader": "^0.20.2",
+		"ts-jest": "^22.0.0",
+		"ts-loader": "^4.1.0",
+		"ts-node": "^5.0.1",
+		"tslint": "^5.8.0",
+		"tslint-react": "^3.5.1",
+		"typescript": "^2.7.x",
+		"uglifyjs-webpack-plugin": "^1.2.4",
+		"url-loader": "^1.0.1",
+		"webpack": "^4.2.0",
+		"webpack-cli": "^2.0.12",
+		"webpack-dev-server": "^3.1.1",
 		"webpack-shell-plugin": "^0.5.0"
 	}
 }
