--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
 		"@types/enzyme": "^3.1.6",
 		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/express": "^4.11.0",
-		"@types/html-webpack-plugin": "^2.30.2",
 		"@types/jest": "^22.2.0",
 		"@types/node": "^9.4.7",
 		"@types/prop-types": "^15.5.2",
@@ -60,8 +59,8 @@
 		"@types/react-router": "^4.0.20",
 		"@types/react-router-dom": "^4.2.5",
 		"@types/url-join": "^0.8.2",
-		"@types/webpack": "^4.0.0",
-		"@types/webpack-env": "^1.13.3",
+		"@types/webpack": "^4.1.3",
+		"@types/webpack-env": "^1.13.5",
 		"babel-cli": "^6.24.1",
 		"babel-core": "^6.25.0",
 		"babel-eslint": "^8.2.2",
@@ -77,6 +76,7 @@
 		"cross-env": "^5.0.1",
 		"css-loader": "^0.28.9",
 		"dotenv": "^5.0.1",
+		"dotenv-webpack": "^1.5.5",
 		"enzyme": "^3.2.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"enzyme-to-json": "^3.3.0",
@@ -86,7 +86,7 @@
 		"eslint-plugin-react": "^7.1.0",
 		"expose-loader": "^0.7.3",
 		"file-loader": "^1.1.9",
-		"html-webpack-plugin": "^3.0.7",
+		"html-webpack-plugin": "^3.2.0",
 		"jest": "^22.0.4",
 		"node-sass": "^4.7.2",
 		"nodemon": "^1.11.0",
@@ -101,11 +101,11 @@
 		"ts-node": "^5.0.1",
 		"tslint": "^5.8.0",
 		"tslint-react": "^3.5.1",
-		"typescript": "^2.7.x",
+		"typescript": "^2.8.1",
 		"uglifyjs-webpack-plugin": "^1.2.4",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.2.0",
-		"webpack-cli": "^2.0.12",
+		"webpack": "^4.5.0",
+		"webpack-cli": "^2.0.14",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-shell-plugin": "^0.5.0"
 	}
