--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
 		"nodemon": "^1.11.0",
 		"npm-run-all": "^4.0.2",
 		"postcss-loader": "^2.0.6",
+		"prettier": "^1.12.0",
 		"react-hot-loader": "^4.0.0",
 		"rimraf": "^2.6.1",
 		"sass-loader": "^6.0.6",
