--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"babel-runtime": "^6.23.0",
 		"express": "^4.15.3",
+		"graphql": "^0.13.2",
 		"immutable": "^3.8.1",
 		"prop-types": "^15.6.1",
 		"query-string": "^6.0.0",
@@ -47,6 +48,7 @@
 		"@types/enzyme": "^3.1.6",
 		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/express": "^4.11.0",
+		"@types/graphql": "^0.13.0",
 		"@types/jest": "^22.2.0",
 		"@types/node": "^9.4.7",
 		"@types/prop-types": "^15.5.2",
@@ -107,6 +109,7 @@
 		"webpack": "^4.5.0",
 		"webpack-cli": "^2.0.14",
 		"webpack-dev-server": "^3.1.1",
+		"webpack-graphql-loader": "^0.1.0",
 		"webpack-shell-plugin": "^0.5.0"
 	}
 }
